# CoRemake

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/data/: build_anchor.yaml  build_pairs.yaml  parse_pdf.yaml
configs/model/: anchor_ranker.yaml  engram_memory.yaml  paper_encoder.yaml  relation_classifier.yaml
configs/train/: eval_end2end.yaml  finetune_relation.yaml  pretrain_encoder.yaml  train_anchor.yaml
docs/: architecture.md  data_format.md  evaluation.md  roadmap.md  training.md
notebooks/: .gitkeep
scripts/: build_anchor_dataset.py  build_citation_graph.py  build_memory_index.py  build_relation_labels.py  build_training_pairs.py  enrich_metadata.py  evaluate_anchor.py  evaluate_logic_chain.py  parse_pdfs.py  run_pipeline.py  train_anchor_ranker.py  train_paper_encoder.py  train_relation_classifier.py
src/coremake/: __init__.py  constants.py
src/coremake/data/: anchor_builder.py  dataset_builder.py  metadata_extractor.py  pair_mining.py  pdf_parser.py  relation_labeler.py  schemas.py
src/coremake/evaluation/: anchor_metrics.py  chain_metrics.py  remake_eval.py
src/coremake/models/: anchor_ranker.py  engram_memory.py  heads.py  losses.py  paper_encoder.py  relation_classifier.py
src/coremake/retrieval/: anchor_search.py  faiss_index.py  logic_chain.py  memory_table.py
src/coremake/training/: callbacks.py  metrics.py  optim.py  scheduler.py  trainer.py
src/coremake/utils/: citation.py  io.py  (+4 more)
tests/: test_anchor.py  test_encoder.py  test_hashing.py  test_memory.py  test_pipeline.py  test_relation.py
